// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS BpkHorizontalNav should render correctly 1`] = `
<RCTScrollView
  alwaysBounceHorizontal={false}
  contentContainerStyle={
    Array [
      Object {
        "borderBottomColor": "rgb(230, 228, 235)",
        "borderBottomWidth": 1,
        "borderColor": "transparent",
        "flexDirection": "column",
      },
    ]
  }
  horizontal={true}
  showsHorizontalScrollIndicator={false}
>
  <View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
        ]
      }
    />
  </View>
</RCTScrollView>
`;

exports[`iOS BpkHorizontalNav should render correctly with arbitrary props 1`] = `
<RCTScrollView
  alwaysBounceHorizontal={false}
  contentContainerStyle={
    Array [
      Object {
        "borderBottomColor": "rgb(230, 228, 235)",
        "borderBottomWidth": 1,
        "borderColor": "transparent",
        "flexDirection": "column",
      },
    ]
  }
  custom="custom-prop"
  horizontal={true}
  showsHorizontalScrollIndicator={false}
>
  <View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
        ]
      }
    />
  </View>
</RCTScrollView>
`;

exports[`iOS BpkHorizontalNav should render correctly with custom "style" prop 1`] = `
<RCTScrollView
  alwaysBounceHorizontal={false}
  contentContainerStyle={
    Array [
      Object {
        "borderBottomColor": "rgb(230, 228, 235)",
        "borderBottomWidth": 1,
        "borderColor": "transparent",
        "flexDirection": "column",
      },
      Object {
        "marginBottom": 10,
      },
    ]
  }
  horizontal={true}
  showsHorizontalScrollIndicator={false}
>
  <View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
        ]
      }
    />
  </View>
</RCTScrollView>
`;

exports[`iOS BpkHorizontalNav should render correctly with the "selected" prop 1`] = `
<RCTScrollView
  alwaysBounceHorizontal={false}
  contentContainerStyle={
    Array [
      Object {
        "borderBottomColor": "rgb(230, 228, 235)",
        "borderBottomWidth": 1,
        "borderColor": "transparent",
        "flexDirection": "column",
      },
    ]
  }
  horizontal={true}
  showsHorizontalScrollIndicator={false}
>
  <View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
        ]
      }
    >
      <BpkHorizontalNavItem
        id="0"
        onLayout={[Function]}
        selected={true}
      />
      <BpkHorizontalNavItem
        id="1"
        onLayout={[Function]}
        selected={false}
      />
    </View>
  </View>
</RCTScrollView>
`;
